--- a/index.html
+++ b/index.html
@@ -2,7 +2,8 @@
 <html lang="it">
 <head>
   <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <!-- Forza layout desktop su mobile + consente pinch-zoom -->
+  <meta name="viewport" content="width=1440, user-scalable=yes, maximum-scale=8" />
   <title>BUMPER Burn — Live Dashboard</title>
   <meta name="description" content="Live burn dashboard for BUMPER on Solana: total burned, USD value, price, and recent burn transactions." />
   <link rel="preload" as="image" href="bg-desktop.png">
@@ -17,6 +18,7 @@
       --accent2: #ff5fd2;
     }
     *{ box-sizing: border-box; }
+    /* Manteniamo il canvas a schermo pieno del viewport "desktop" */
     html, body { height: 100%; margin: 0; background: #0b0b12; color: var(--text); overflow: hidden; }
     canvas { display: block; width: 100vw; height: 100vh; }
   </style>
@@ -26,8 +28,8 @@
 
   <script>
     // ---- Config ----
-    const BG_SRC      = 'bg-desktop.png';       // main background
-    const THUMB_SRC   = 'bg-thumb.webp';        // small preview (optional)
+    const BG_SRC      = 'bg-desktop.png'; // main background
+    const THUMB_SRC   = 'bg-thumb.webp';  // small preview (optional)
 
     const BURN_JSON   = 'data/burn.json';
     const PRICE_JSON  = 'data/price.json';
@@ -37,15 +39,10 @@
     const DRAW_UI_ONLY_WHEN_READY = true;
     const USE_THUMB_PLACEHOLDER   = false;
 
-    // ======== CARD POSITIONS (desktop, come da tue scelte) ========
-    const CARDS_Y_FRAC = 0.1350;          // y fraction (under title, avoid car)
-    const CARD1_CENTER_X_FRAC = 0.3220;   // Total burned (under BELLA)
-    const CARD2_CENTER_X_FRAC = 0.6520;   // Total USD burned (under BURN)
-
-    // ======== Mobile tuning ========
-    const MOBILE_BREAKPOINT = 900;        // < 900px = mobile mode
-    const MOBILE_CARDS_Y_FRAC = 0.13;     // posizione verticale card1 su mobile
-    const MOBILE_CARDS_GAP_PX = 10;       // distanza tra card1 e card2 su mobile (px scalati)
+    // ======== CARD POSITIONS (fisse come da tue scelte) ========
+    const CARDS_Y_FRAC = 0.1350;          // y fraction (sotto titolo, evita auto)
+    const CARD1_CENTER_X_FRAC = 0.3220;   // Total burned (sotto BELLA)
+    const CARD2_CENTER_X_FRAC = 0.6520;   // Total USD burned (sotto BURN)
 
     // Colors
     const COLOR = {
@@ -65,7 +62,10 @@
     ctx.imageSmoothingQuality = 'high';
 
     function resizeCanvasToDisplaySize() {
-      const dpr = window.devicePixelRatio || 1;
+      // Clampa il DPR per non esplodere su telefoni ad alto DPI
+      const MAX_DPR = 2;
+      const dpr = Math.min(window.devicePixelRatio || 1, MAX_DPR);
+
       const w = Math.floor(window.innerWidth);
       const h = Math.floor(window.innerHeight);
       if (canvas.width !== w * dpr || canvas.height !== h * dpr) {
@@ -78,11 +78,9 @@
     }
 
     function scaleUnit() {
-      // consente di scalare più in basso su mobile
       const w = canvas.clientWidth, h = canvas.clientHeight;
       const s = Math.min(w / 1440, h / 900);
-      const isMobile = w < MOBILE_BREAKPOINT;
-      return Math.max(isMobile ? 0.45 : 0.65, Math.min(1.15, s));
+      return Math.max(0.65, Math.min(1.15, s));
     }
     const px = (n)=> Math.round(n * scaleUnit());
 
@@ -193,7 +191,6 @@
     function draw(){
       resizeCanvasToDisplaySize();
       const w = canvas.clientWidth, h = canvas.clientHeight;
-      const isMobile = w < MOBILE_BREAKPOINT;
 
       ctx.clearRect(0,0,w,h);
       drawBackground(w, h);
@@ -219,7 +216,7 @@
       const label2 = 'Total USD burned';
       const value2 = money(totalUsd);
 
-      // misura card 1
+      // misura card 1 (label sinistra, valore sotto)
       ctx.font = `${labelWeight} ${labelSize}px system-ui, -apple-system, Segoe UI, Roboto, Helvetica, Arial, sans-serif`;
       const c1LabelW = ctx.measureText(label1).width;
       ctx.font = `${valueWeight} ${valueSize}px system-ui, -apple-system, Segoe UI, Roboto, Helvetica, Arial, sans-serif`;
@@ -227,7 +224,7 @@
       const card1W = Math.ceil(Math.max(c1LabelW, c1ValueW) + padX*2);
       const card1H = Math.ceil(padY*2 + labelSize + vGap + valueSize);
 
-      // misura card 2
+      // misura card 2 (label destra, valore sotto)
       ctx.font = `${labelWeight} ${labelSize}px system-ui, -apple-system, Segoe UI, Roboto, Helvetica, Arial, sans-serif`;
       const c2LabelW = ctx.measureText(label2).width;
       ctx.font = `${valueWeight} ${valueSize}px system-ui, -apple-system, Segoe UI, Roboto, Helvetica, Arial, sans-serif`;
@@ -235,52 +232,41 @@
       const card2W = Math.ceil(Math.max(c2LabelW, c2ValueW) + padX*2);
       const card2H = Math.ceil(padY*2 + labelSize + vGap + valueSize);
 
-      // ---- Posizioni card
-      let card1X, card1Y, card2X, card2Y;
+      // y pos sotto titolo, cercando di non coprire la macchina (tetto ~33% h)
+      let topY = Math.floor(h * CARDS_Y_FRAC);
+      const maxSafeY = Math.floor(h * 0.33 - Math.max(card1H, card2H));
+      if (topY > maxSafeY) topY = Math.max(px(8), maxSafeY);
 
-      if (!isMobile) {
-        // Desktop: usa le tue frazioni
-        let topY = Math.floor(h * CARDS_Y_FRAC);
-        // evita l'auto (tetto ~33% h)
-        const maxSafeY = Math.floor(h * 0.33 - Math.max(card1H, card2H));
-        if (topY > maxSafeY) topY = Math.max(px(8), maxSafeY);
+      // x pos fissate dalle frazioni (centro carta) — NESSUN fallback mobile
+      const c1cx = Math.floor(w * CARD1_CENTER_X_FRAC);
+      const c2cx = Math.floor(w * CARD2_CENTER_X_FRAC);
 
-        const c1cx = Math.floor(w * CARD1_CENTER_X_FRAC);
-        const c2cx = Math.floor(w * CARD2_CENTER_X_FRAC);
-        card1X = c1cx - Math.floor(card1W/2);
-        card2X = c2cx - Math.floor(card2W/2);
-        card1Y = card2Y = topY;
-      } else {
-        // Mobile: impilate e centrate
-        const centerX = Math.floor(w * 0.5);
-        card1X = centerX - Math.floor(card1W/2);
-        card1Y = Math.floor(h * MOBILE_CARDS_Y_FRAC);
-        card2X = centerX - Math.floor(card2W/2);
-        card2Y = card1Y + card1H + px(MOBILE_CARDS_GAP_PX);
-      }
+      const card1X = c1cx - Math.floor(card1W/2);
+      const card2X = c2cx - Math.floor(card2W/2);
 
-      // draw card 1 (label left, value sotto)
-      drawGlass(card1X, card1Y, card1W, card1H);
-      text({ str: label1, x: card1X + padX, y: card1Y + padY + 2, size: labelSize, weight: labelWeight, color: COLOR.muted, baseline: 'top' });
-      text({ str: value1, x: card1X + padX, y: card1Y + padY + labelSize + vGap, size: valueSize, weight: valueWeight, color: COLOR.accent, baseline: 'top' });
+      // draw card 1
+      drawGlass(card1X, topY, card1W, card1H);
+      text({ str: label1, x: card1X + padX, y: topY + padY + 2, size: labelSize, weight: labelWeight, color: COLOR.muted, baseline: 'top' });
+      text({ str: value1, x: card1X + padX, y: topY + padY + labelSize + vGap, size: valueSize, weight: valueWeight, color: COLOR.accent, baseline: 'top' });
 
-      // draw card 2 (label right, value sotto)
-      const c2LabelX = card2X + card2W - padX;
-      drawGlass(card2X, card2Y, card2W, card2H);
-      text({ str: label2, x: c2LabelX, y: card2Y + padY + 2, size: labelSize, weight: labelWeight, color: COLOR.muted, align: 'right', baseline: 'top' });
-      text({ str: value2, x: card2X + padX, y: card2Y + padY + labelSize + vGap, size: valueSize, weight: valueWeight, color: COLOR.accent2, baseline: 'top' });
+      // draw card 2 (label right)
+      drawGlass(card2X, topY, card2W, card2H);
+      text({ str: label2, x: card2X + card2W - padX, y: topY + padY + 2, size: labelSize, weight: labelWeight, color: COLOR.muted, align: 'right', baseline: 'top' });
+      text({ str: value2, x: card2X + padX, y: topY + padY + labelSize + vGap, size: valueSize, weight: valueWeight, color: COLOR.accent2, baseline: 'top' });
 
       // --- Table & mini-cards ---
+      const rowsAll = (burn?.burns || []);
       const tableW = Math.min(Math.max(px(420), Math.floor(w*0.92)), px(1000));
       const rowH   = px(24), headH = px(46), tPad = px(10);
 
-      // posizioniamo la tabella in base alle card per evitare sovrapposizioni
-      let tableX = Math.floor((w - tableW)/2);
-      let tableY = (!isMobile)
-        ? Math.floor(h * 0.64)
-        : (card2Y + card2H + px(14));  // su mobile subito sotto le card
+      const tableX = Math.floor((w - tableW)/2);
+      let tableY = Math.floor(h * 0.64);
+      const maxRowsBySpace = Math.floor(((h - 12) - tableY - (tPad*2 + headH)) / rowH);
+      const rows = rowsAll.slice(0, Math.max(1, Math.min(20, maxRowsBySpace)));
 
-      // mini-cards sopra tabella
+      const tableH = headH + Math.max(1, rows.length) * rowH + tPad*2;
+
+      // mini: supply (left) e updated (right)
       const miniGap = px(10), miniH = px(42);
 
       const supplyNum = (price && typeof price.totalSupplyTokensNum === 'number')
@@ -290,43 +276,19 @@
       ctx.font = `700 ${px(12)}px system-ui, -apple-system, Segoe UI, Roboto, Helvetica, Arial, sans-serif`;
       let meas = ctx.measureText(supplyStr);
       const supplyW = Math.min(Math.max(meas.width + px(24), px(220)), px(360));
-      let supplyX = tableX;
-      let supplyY = tableY - miniH - miniGap;
+      const supplyX = tableX;
+      const supplyY = tableY - miniH - miniGap;
+      drawGlass(supplyX, supplyY, supplyW, miniH);
+      text({ str: supplyStr, x: supplyX + px(12), y: supplyY + Math.floor(miniH/2)+1, size: px(12), weight: 700, baseline: 'middle', color: COLOR.text });
 
       const updated = price?.updatedAt || burn?.updatedAt || null;
       const updatedStr = updated ? `Last updated: ${new Date(updated).toLocaleString()}` : 'Last updated: —';
       meas = ctx.measureText(updatedStr);
       const updW = Math.min(Math.max(meas.width + px(24), px(220)), px(420));
-      let updX = tableX + tableW - updW;
-      let updY = supplyY;
-
-      // Su mobile, se non ci stanno affiancate, le impiliamo
-      if (isMobile && supplyW + updW + px(8) > tableW) {
-        // supply sopra, updated sotto
-        supplyX = tableX;
-        supplyY = tableY - miniH*2 - miniGap*2;
-        updX = tableX;
-        updY = supplyY + miniH + miniGap;
-        // sposta un filo in basso la tabella per non stringere
-        tableY = tableY; // già sotto le card, ok
-      }
-
-      // calcolo righe tabella che entrano davvero nello spazio rimasto
-      // prima disegniamo i box mini, così teniamo conto del loro spazio
-      drawGlass(supplyX, supplyY, supplyW, miniH);
-      text({ str: supplyStr, x: supplyX + px(12), y: supplyY + Math.floor(miniH/2)+1, size: px(12), weight: 700, baseline: 'middle', color: COLOR.text });
-
+      const updX = tableX + tableW - updW;
+      const updY = supplyY;
       drawGlass(updX, updY, updW, miniH);
       text({ str: updatedStr, x: updX + px(12), y: updY + Math.floor(miniH/2)+1, size: px(12), weight: 700, baseline: 'middle', color: COLOR.muted });
-
-      // spazio disponibile fino al fondo (margine 12px)
-      const avail = (h - 12) - tableY;
-      const rowsAll = (burn?.burns || []);
-      let rowsFit = Math.floor((avail - (headH + tPad*2)) / rowH);
-      rowsFit = Math.max(4, Math.min(rowsFit, (!isMobile ? 20 : 10))); // su mobile max 10, ma almeno 4
-      const rows = rowsAll.slice(0, Math.max(0, rowsFit));
-
-      const tableH = headH + Math.max(1, rows.length) * rowH + tPad*2;
 
       // tabella
       drawGlass(tableX, tableY, tableW, tableH);
@@ -340,7 +302,6 @@
       const colIndexW = px(32);
       const colQtyW   = Math.max(px(150), Math.floor(tableW*0.28));
 
-      // Rows
       linkHitboxes = [];
       for (let i=0; i<Math.max(1, rows.length); i++){
         const ry = tableY + headH + tPad + i*rowH;
